--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,8 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
   padding-bottom: 20px;
+  height: 100%;
+  display:flex;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -65,6 +66,20 @@ body {
 
 }
 
+md-icon{
+  margin-top:0px;
+}
+
+.appMenu{
+  padding:10px;
+  margin-right:10px;
+}
+
+.menu-item{
+  width:100%;
+  text-align:left;
+  padding:12px;
+}
 
 
 .buttondemoBasicUsage {
@@ -90,7 +105,6 @@ body {
   left: 7px;
   color: #ccc;
   font-size: 14px; }
-
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
