--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,8 @@
 
 <div class="row marketing">
   <h2>Useful Resources:</h2>
-  <md-button ng-href="http://dnd.wizards.com/articles/features/basicrules" target="_blank" class="md-primary"><span>Basic Rules</span></md-button>
-
-  <md-button ng-href="http://dnd.wizards.com/articles/features/character_sheets" target="_blank" class="md-primary"><span>Characer Sheets</span></md-button>
+  <div layout="row" layout-sm="column">
+    <md-button ng-href="http://dnd.wizards.com/articles/features/basicrules" target="_blank" class="md-primary" flex flex-sm="100"><span>Basics Rules</span></md-button>
+    <md-button ng-href="http://dnd.wizards.com/articles/features/character_sheets" target="_blank" class="md-primary" flex flex-sm="100"><span>Characer Sheets</span></md-button>
+  </div>
 </div>
