minor update to jumbotron p font weight

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -57,6 +57,11 @@ h1{
   border-bottom: 1px solid #e5e5e5;
   padding:2em;
 }
+
+.jumbotron p{
+  font-weight:500;
+}
+
 .jumbotron .btn {
   font-size: 21px;
   padding: 14px 24px;
