--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,4 +9,8 @@
     <md-button ng-href="http://dnd.wizards.com/articles/features/basicrules" target="_blank" class="md-primary" flex flex-sm="100"><span>Basics Rules</span></md-button>
     <md-button ng-href="http://dnd.wizards.com/articles/features/character_sheets" target="_blank" class="md-primary" flex flex-sm="100"><span>Characer Sheets</span></md-button>
   </div>
+  <div layout="row" layout-sm="column">
+    <md-button ng-href="http://www.google.com/design/spec/material-design/introduction.html" target="_blank" class="md-primary" flex flex-sm="100"><span>Material Design</span></md-button>
+    <md-button ng-href="https://material.angularjs.org/#/" target="_blank" class="md-primary" flex flex-sm="100"><span>Angular Material</span></md-button>
+  </div>
 </div>
