--- a/app/views/character-details.html
+++ b/app/views/character-details.html
@@ -1,34 +1,23 @@
-<p>Character Details include:</p>
-<ul>
-  <li>Character Name</li>
-  <li>Race</li>
-  <li>Subrace</li>
-  <li>Class</li>
-  <li>Background</li>
-  <li>Alignment</li>
-  <li>Experience Points</li>
-  <li>Level</li>
-</ul>
 
 <div>
-<md-content>
+  <md-content>
     <form name="userForm">
 
       <div layout layout-sm="column">
         <md-input-container flex>
           <label>Character Name</label>
-          <input ng-model="details.name">
+          <input ng-model="details.name" ng-change="setName()">
         </md-input-container>
 
         <md-input-container class="selectBox" flex>
           <label class="md-primary select-label">Race</label>
-          <select class="md-input" ng-model="selectedRace" ng-options="item for item in races track by item" ng-change="updateSubrace()">
+          <select class="md-input" ng-model="selectedRace" ng-options="item for item in races track by item" ng-change="updateSubrace(); setRace(); setSubrace()">
           </select>
         </md-input-container>
 
         <md-input-container class="selectBox" flex>
           <label class="md-primary select-label">Subrace</label>
-          <select id="subrace" class="md-input" ng-model="selectedSubrace" ng-options="item for item in subraces track by item">
+          <select id="subrace" class="md-input" ng-model="selectedSubrace" ng-options="item for item in subraces track by item" ng-change="setSubrace()">
           </select>
         </md-input-container>
       </div>
@@ -36,17 +25,17 @@
       <div layout layout-sm="column">
         <md-input-container class="selectBox" flex>
           <label class="md-primary select-label">Class</label>
-          <select class="md-input" ng-model="selectedClass" ng-options="item for item in characterClasses">
+          <select class="md-input" ng-model="selectedClass" ng-options="item for item in characterClasses" ng-change="setClass()">
           </select>
         </md-input-container>
         <md-input-container class="selectBox" flex>
           <label class="md-primary select-label">Background</label>
-          <select class="md-input" ng-model="selectedBackground" ng-options="item for item in backgrounds">
+          <select class="md-input" ng-model="selectedBackground" ng-options="item for item in backgrounds" ng-change="setBackground()">
           </select>
         </md-input-container>
         <md-input-container class="selectBox" flex>
           <label class="md-primary select-label">Alignment</label>
-          <select class="md-input" ng-model="selectedAlignment" ng-options="item for item in alignment">
+          <select class="md-input" ng-model="selectedAlignment" ng-options="item for item in alignment" ng-change="setAlignment()">
           </select>
         </md-input-container>
       </div>
@@ -54,7 +43,7 @@
       <div layout layout-sm="column">
         <md-input-container flex>
           <label>Experience Points</label>
-          <input name="exp" ng-model="characterExp" ng-change="calculateLevel()">
+          <input name="exp" ng-model="characterExp" ng-change="calculateLevel(); setExp()" ng-init="calculateLevel()">
         </md-input-container>
         <md-input-container flex>
           <label>Level</label>
