--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h1>Pocket Scroll</h1>
-  <p class="lead">A DnD Character Editor</p>
+  <h1>Scrollbinder</h1>
+  <p class="lead">A DnD Character Planner</p>
 </div>
 
 <div class="row marketing">
