--- a/app/views/character-details.html
+++ b/app/views/character-details.html
@@ -2,8 +2,9 @@
 <div>
   <md-content>
     <form name="userForm">
-
+      <h2>Character Details</h2>
       <div layout layout-sm="column">
+
         <md-input-container flex>
           <label>Character Name</label>
           <input ng-model="details.name" ng-change="setName()">
