--- a/app/views/ability-scores.html
+++ b/app/views/ability-scores.html
@@ -1,9 +1,86 @@
-<p>Ability Scores:</p>
-<ul>
-  <li>Strength</li>
-  <li>Agility</li>
-  <li>Constitution</li>
-  <li>Intelligence</li>
-  <li>Wisdom</li>
-  <li>Charisma</li>
-</ul>
+<md-content>
+  <h2>Ability Scores</h2>
+  <div layout layout-sm="column">
+    <span id="viewMessage" ng-class="{'hide' : isHidden, 'message' : isMessage, 'warning' : isWarning}" ng-model="detectRace" ng-init="getRace()">
+      <span ng-model="detectRace" ng-repeat="item in detectRace">{{item.msg}}<strong>{{item.bns}}</strong></span>
+      <span ng-model="detectSubrace" ng-repeat="item in detectSubrace">{{item.msg}}<strong>{{item.bns}}</strong></span>
+    </span>
+  </div>
+
+  <!--Ability Score 'table' -->
+  <div id="abilityScores">
+    <!-- Headings for the ability scores columns -->
+    <div layout="row" class="heading">
+      <div flex="33">Stat</div><div flex="33">Score</div><div flex="33">Modifier</div>
+    </div>
+
+
+    <!-- Strength -->
+    <div class="abilityRow" layout="row" ng-model="strength">
+      <div flex="33">Strength</div>
+      <div flex="33">
+        <md-input-container>
+          <input type="number" ng-model="abilityScores.str" ng-change="setStr()">
+        </md-input-container>
+      </div>
+
+      <div ng-model="strMod" flex="33" ng-init="setStr()">{{strMod}}</div>
+    </div>
+
+    <!-- Dexterity -->
+    <div class="abilityRow" layout="row" ng-model="dexterity">
+      <div flex="33">Dexterity</div>
+      <div flex="33">
+        <md-input-container>
+          <input type="number" ng-model="abilityScores.dex" ng-change="setDex()">
+        </md-input-container>
+      </div>
+      <div ng-model="dexMod" flex="33" ng-init="setDex()">{{dexMod}}</div>
+    </div>
+
+    <!-- Constitution -->
+    <div class="abilityRow" layout="row" ng-model="constitution">
+      <div flex="33">Constitution</div>
+      <div flex="33">
+        <md-input-container>
+          <input type="number" ng-model="abilityScores.con" ng-change="setCon()">
+        </md-input-container>
+      </div>
+      <div ng-model="conMod" flex="33" ng-init="setCon()">{{conMod}}</div>
+    </div>
+
+    <!-- Intelligence -->
+    <div class="abilityRow" layout="row" ng-model="intelligence">
+      <div flex="33">Intelligence</div>
+      <div flex="33">
+        <md-input-container>
+          <input type="number" ng-model="abilityScores.int" ng-change="setInt()">
+        </md-input-container>
+      </div>
+      <div ng-model="intMod" flex="33" ng-init="setInt()">{{intMod}}</div>
+    </div>
+
+    <!-- Wisdom -->
+    <div class="abilityRow" layout="row" ng-model="wisdom">
+      <div flex="33">Wisdom</div>
+      <div flex="33">
+        <md-input-container>
+          <input type="number" ng-model="abilityScores.wis" ng-change="setWis()">
+        </md-input-container>
+      </div>
+      <div ng-model="wisMod" flex="33" ng-init="setWis()">{{wisMod}}</div>
+    </div>
+
+    <!-- Charisma -->
+    <div class="abilityRow" layout="row" ng-model="charisma">
+      <div flex="33">Charisma</div>
+      <div flex="33">
+        <md-input-container>
+          <input type="number" ng-model="abilityScores.cha" ng-change="setCha()">
+        </md-input-container>
+      </div>
+      <div ng-model="chaMod" flex="33" ng-init="setCha()">{{chaMod}}</div>
+    </div>
+
+  </div>
+</md-content>
