--- a/app/views/ability-scores.html
+++ b/app/views/ability-scores.html
@@ -1,11 +1,10 @@
 <md-content>
 
-  <div layout="row">
-    <h2 flex="90" sm-flex="80">Ability Scores</h2>
-
-      <md-button flex="10" sm-flex="20" class="md-primary" ng-click="showAlert($event)">
-        <md-icon icon="img/icons/help.png" style="width: 24px; height: 24px;"></md-icon>
-      </md-button>
+  <div class="titleBar" layout="row">
+    <h2>Ability Scores</h2>
+    <md-button flex="10" flex-sm="20" class="md-primary" ng-click="showAlert($event)" aria-label="Proficiency Info">
+      <md-icon icon="img/icons/help-white.png" style="width: 24px; height: 24px;"></md-icon>
+    </md-button>
   </div>
 
   <div layout layout-sm="column">
