--- a/app/views/character-details.html
+++ b/app/views/character-details.html
@@ -1,8 +1,15 @@
 
 <div>
   <md-content>
-    <form name="userForm">
+
+    <div class="titleBar" layout="row">
       <h2>Character Details</h2>
+      <!-- <md-button flex="10" flex-sm="20" class="md-primary" ng-click="showAlert($event)" aria-label="Proficiency Info">
+        <md-icon icon="img/icons/help-white.png" style="width: 24px; height: 24px;"></md-icon>
+      </md-button> -->
+    </div>
+
+    <form id="characterForm"name="userForm">
       <div layout layout-sm="column">
 
         <md-input-container flex>
