--- a/app/views/to-do.html
+++ b/app/views/to-do.html
@@ -1,26 +1,21 @@
 <ul class="done">
   <li>Character Details</li>
-  <ul>
-    <li>Character Name</li>
-    <li>Race</li>
-    <li>Subrace</li>
-    <li>Class</li>
-    <li>Background</li>
-    <li>Alignment</li>
-    <li>Experience Points</li>
-    <li>Level</li>
-  </ul>
+</ul>
+
+<ul class="done">
+  <li>Ability Scores</li>
 </ul>
 
 <ul>
-  <li>Ability Scores</li>
+  <li>Proficiency</li>
   <ul>
-    <li>Strength</li>
-    <li>Agility</li>
-    <li>Constitution</li>
-    <li>Intelligence</li>
-    <li>Wisdom</li>
-    <li>Charisma</li>
+    <li>Proficiency Bonus</li>
+    <li>Armor</li>
+    <li>Weapons</li>
+    <li>Tools</li>
+    <li>Tools</li>
+    <li>Saving Throws</li>
+    <li>Skills</li>
   </ul>
 </ul>
 
