--- a/app/views/character-details.html
+++ b/app/views/character-details.html
@@ -2,7 +2,7 @@
 <div>
   <md-content>
 
-    <div class="titleBar" layout="row">
+    <div id="pageTitle" class="titleBar" layout="row">
       <h2>Character Details</h2>
       <!-- <md-button flex="10" flex-sm="20" class="md-primary" ng-click="showAlert($event)" aria-label="Proficiency Info">
         <md-icon icon="img/icons/help-white.png" style="width: 24px; height: 24px;"></md-icon>
@@ -51,11 +51,11 @@
       <div layout layout-sm="column">
         <md-input-container flex>
           <label>Experience Points</label>
-          <input name="exp" ng-model="characterExp" ng-change="calculateLevel(); setExp()" ng-init="calculateLevel()">
+          <input type="number" name="exp" ng-model="characterExp" ng-change="calculateLevel(); setExp()" ng-init="calculateLevel()">
         </md-input-container>
         <md-input-container flex>
           <label>Level</label>
-          <input ng-model="characterLevel">
+          <input type="number" ng-change="setLevel()" ng-model="characterLevel">
         </md-input-container>
       </div>
     </form>
