--- a/app/views/proficiency.html
+++ b/app/views/proficiency.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model"profBonus">
-    <span flex="25" flex-md="30" flex-sm="60">Proficiency Bonus:</span><span flex="75" flex-md="70" flex-sm="40"><strong>+{{profBonus}}</strong></span>
+    <div flex="25" flex-md="30" flex-sm="60">Proficiency Bonus:</div><div flex="75" flex-md="70" flex-sm="40"><strong>+{{profBonus}}</strong></div>
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model"armorProf">
