fixed a bug that was causing grunt to complain. Also trying to fix ios not displaying proficiency screen correctly

--- a/app/views/proficiency.html
+++ b/app/views/proficiency.html
@@ -14,27 +14,27 @@
     </span>
   </div>
 
-  <div class="profStat" layout="row" layout-sm="column" ng-model"profBonus">
+  <div class="profStat" layout="row" layout-sm="column" ng-model="profBonus">
     <div flex="25" flex-md="30" flex-sm="60">Proficiency Bonus:</div><div flex="75" flex-md="70" flex-sm="40"><strong>+{{profBonus}}</strong></div>
   </div>
 
-  <div class="profStat" layout="row" layout-sm="column" ng-model"armorProf">
-    <span flex="25" flex-md="30" flex-sm="100">Armor:</span><span flex="75" flex-md="70" flex-sm="100"><strong>{{armorProf}}</strong></span>
+  <div class="profStat" layout="row" layout-sm="column" ng-model="armorProf">
+    <div flex="25" flex-md="30" flex-sm="100">Armor:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{armorProf}}</strong></div>
   </div>
 
-  <div class="profStat" layout="row" layout-sm="column" ng-model"weapProf">
-    <span flex="25" flex-md="30" flex-sm="100">Weapons:</span><span flex="75" flex-md="70" flex-sm="100"><strong>{{weapProf}}</strong></span>
+  <div class="profStat" layout="row" layout-sm="column" ng-model="weapProf">
+    <div flex="25" flex-md="30" flex-sm="100">Weapons:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{weapProf}}</strong></div>
   </div>
 
-  <div class="profStat" layout="row" layout-sm="column" ng-model"toolProf">
-    <span flex="25" flex-md="30" flex-sm="100">Tools:</span><span flex="75" flex-md="70" flex-sm="100"><strong>{{toolProf}}</strong></span>
+  <div class="profStat" layout="row" layout-sm="column" ng-model="toolProf">
+    <div flex="25" flex-md="30" flex-sm="100">Tools:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{toolProf}}</strong></div>
   </div>
 
-  <div class="profStat" layout="row" layout-sm="column" ng-model"savingThrows">
-    <span flex="25" flex-md="30" flex-sm="100">Saving Throws:</span><span flex="75" flex-md="70" flex-sm="100"><strong>{{savingThrows}}</strong></span>
+  <div class="profStat" layout="row" layout-sm="column" ng-model="savingThrows">
+    <div flex="25" flex-md="30" flex-sm="100">Saving Throws:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{savingThrows}}</strong></div>
   </div>
 
-  <div class="profStat" layout="row" layout-sm="column" ng-model"skillsProf">
-    <span flex="25" flex-md="30" flex-sm="100">Skills:</span><span flex="75" flex-md="70" flex-sm="100"><strong>{{skillsProf}}</strong></span>
+  <div class="profStat" layout="row" layout-sm="column" ng-model="skillsProf">
+    <div flex="25" flex-md="30" flex-sm="100">Skills:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{skillsProf}}</strong></div>
   </div>
 </md-content>
