going to try adding some line height

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -406,7 +406,9 @@ input[type=number]::-webkit-outer-spin-button {
   #mainMenu .md-toolbar-tools .md-button{
     margin-right:1em;
   }
-
+  .profStat{
+    line-height: 2em;
+  }
 
 
 }
