no luck, maybe p tags will save the day

--- a/app/views/proficiency.html
+++ b/app/views/proficiency.html
@@ -15,26 +15,26 @@
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model="profBonus">
-    <div flex="25" flex-md="30" flex-sm="60">Proficiency Bonus:</div><div flex="75" flex-md="70" flex-sm="40"><strong>+{{profBonus}}</strong></div>
+    <div flex="25" flex-md="30" flex-sm="100"><p>Proficiency Bonus:</p></div><div flex="75" flex-md="70" flex-sm="100"><p><strong>+{{profBonus}}</strong></p></div>
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model="armorProf">
-    <div flex="25" flex-md="30" flex-sm="100">Armor:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{armorProf}}</strong></div>
+    <div flex="25" flex-md="30" flex-sm="100"><p>Armor:</p></div><div flex="75" flex-md="70" flex-sm="100"><p><strong>{{armorProf}}</strong></p></div>
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model="weapProf">
-    <div flex="25" flex-md="30" flex-sm="100">Weapons:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{weapProf}}</strong></div>
+    <div flex="25" flex-md="30" flex-sm="100"><p>Weapons:</p></div><div flex="75" flex-md="70" flex-sm="100"><p><strong>{{weapProf}}</strong></p></div>
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model="toolProf">
-    <div flex="25" flex-md="30" flex-sm="100">Tools:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{toolProf}}</strong></div>
+    <div flex="25" flex-md="30" flex-sm="100"><p>Tools:</p></div><div flex="75" flex-md="70" flex-sm="100"><strong><p>{{toolProf}}</strong></p></div>
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model="savingThrows">
-    <div flex="25" flex-md="30" flex-sm="100">Saving Throws:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{savingThrows}}</strong></div>
+    <div flex="25" flex-md="30" flex-sm="100"><p>Saving Throws:</p></div><div flex="75" flex-md="70" flex-sm="100"><strong><p>{{savingThrows}}</strong></p></div>
   </div>
 
   <div class="profStat" layout="row" layout-sm="column" ng-model="skillsProf">
-    <div flex="25" flex-md="30" flex-sm="100">Skills:</div><div flex="75" flex-md="70" flex-sm="100"><strong>{{skillsProf}}</strong></div>
+    <div flex="25" flex-md="30" flex-sm="100"><p>Skills:</p></div><div flex="75" flex-md="70" flex-sm="100"><strong><p>{{skillsProf}}</strong></p></div>
   </div>
 </md-content>
