trying by giving the p tags some height, maybe it has to do with layout divs in profStat rows

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -245,6 +245,11 @@ label{
 .profStat{
   padding:1em;
 }
+.profStat p{
+  height:2em;
+  margin:0;
+  display:block;  
+}
 
 /*pop-up dialog styles*/
 md-dialog p{
