--- a/app/views/proficiency.html
+++ b/app/views/proficiency.html
@@ -1,6 +1,6 @@
 <md-content>
   <div id="pageTitle" class="titleBar" layout="row">
-      <h2>Proficiency test</h2>
+      <h2>Proficiency</h2>
       <md-button flex="10" flex-sm="20" class="md-primary" ng-click="showAlert($event)" aria-label="Proficiency Info">
         <md-icon icon="img/icons/help-white.png" style="width: 24px; height: 24px;"></md-icon>
       </md-button>
